--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -3,11 +3,11 @@ FROM golang:1.24-bullseye AS builder
 ARG KERNEL_VERSION
 RUN if [ -z "$KERNEL_VERSION" ]; then \
       echo >&2 "ERROR: KERNEL_VERSION is empty.  \
-      Please pass --build-arg KERNEL_VERSION=$(uname -r)"; \
+      Please pass --build-arg KERNEL_VERSION=<your-kernel-version>"; \
       exit 1; \
     fi
 
-# Install necessary dependencies for eBPF and RDMA development
+# Install common development dependencies
 RUN apt-get update && apt-get install -y \
     clang \
     llvm \
@@ -19,9 +19,12 @@ RUN apt-get update && apt-get install -y \
     librdmacm-dev \
     dpkg-dev \
     linux-libc-dev \
-    linux-headers-${KERNEL_VERSION} \
-    linux-headers-${KERNEL_VERSION}-common \
     && rm -rf /var/lib/apt/lists/*
+
+# Try to install kernel headers, but continue if it fails
+RUN apt-get update && \
+    apt-get install -y linux-headers-${KERNEL_VERSION} || \
+    echo "Warning: Failed to install linux-headers-${KERNEL_VERSION}. eBPF features may not work correctly."
 
 WORKDIR /app
 
@@ -35,14 +38,13 @@ COPY . .
 # Compile eBPF C code using standard include paths
 RUN clang -g -O2 -Wall -target bpf \
       -I pkg/ebpf/bpf/include \
-      -I /usr/src/linux-headers-${KERNEL_VERSION}-common/include \
       -I /usr/src/linux-headers-${KERNEL_VERSION}/include \
       -I /usr/include \
       -c pkg/ebpf/bpf/rdma_tracing.c -o /tmp/rdma_tracing.o || touch /tmp/rdma_tracing.o
 
 # Install bpf2go and run go generate to create eBPF bindings
 RUN go install github.com/cilium/ebpf/cmd/bpf2go@latest
-RUN cd pkg/ebpf && KERNEL_VERSION=${KERNEL_VERSION} go generate ./...
+RUN cd pkg/ebpf && KERNEL_VERSION=${KERNEL_VERSION} go generate ./... || echo "Warning: Failed to generate eBPF bindings"
 
 # Build the Go application
 RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o /app/bin/agent cmd/agent/main.go
