--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Setup Docker Compose
       uses: docker/setup-buildx-action@v3
 
-    - name: Run controller tests with Docker Compose
-      run: make test-controller
+    - name: Run tests
+      run: make test
