--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -8,7 +8,7 @@ services:
     entrypoint: []
     volumes:
       - ./bin:/output
-    command: sh -c "cp /app/agent /output/ && cp /app/agent.yaml /output/"
+    command: sh -c "cp /app/agent /output/ && cp /app/agent.yaml /output/ && sync"
 
   controller-builder:
     build:
@@ -17,4 +17,4 @@ services:
     entrypoint: []
     volumes:
       - ./bin:/output
-    command: sh -c "cp /app/controller /output/ && cp /app/controller.yaml /output/"
+    command: sh -c "cp /app/controller /output/ && cp /app/controller.yaml /output/ && sync"
