--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -6,15 +6,11 @@ services:
       args:
         - KERNEL_VERSION=${KERNEL_VERSION:-5.15.0-generic}
     entrypoint: []
-    volumes:
-      - ./bin:/output
-    command: sh -c "cp /app/agent /output/ && cp /app/agent.yaml /output/ && sync"
+    command: ["echo", "Successfully built agent"]
 
   controller-builder:
     build:
       context: .
       dockerfile: Dockerfile.controller
     entrypoint: []
-    volumes:
-      - ./bin:/output
-    command: sh -c "cp /app/controller /output/ && cp /app/controller.yaml /output/ && sync"
+    command: ["echo", "Successfully built controller"]
