chore: update VSCode settings to disable cgo analysis in gopls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
 	"files.associations": {
 		"vmlinux.h": "c"
+	},
+	"gopls": {
+		"analyses": {
+			"cgo": {
+				"enabled": false
+			}
+		}
 	}
 }
