fix: resolve CI test failures because of the lack of go generated ebpf object file
- Removed unnecessary volume mapping in docker-compose.test.yml.
- Added missing eBPF object file copy in Dockerfile.agent for proper agent functionality.

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -61,5 +61,6 @@ WORKDIR /app
 # Copy binary and config
 COPY --from=builder /app/bin/agent ./agent
 COPY --from=builder /app/agent.yaml ./agent.yaml
+COPY --from=builder /app/internal/ebpf/rdmatracing_x86_bpfel.o ./internal/ebpf/rdmatracing_x86_bpfel.o
 
 ENTRYPOINT ["./agent"]
