--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,8 +1,10 @@
 name: Go Tests
 
 on:
-  push:
   pull_request:
+    branches: [ main ]
+  push:
+    branches: [ main ]
 
 # Prevent concurrent runs of the same workflow
 concurrency:
