feat(devcontainer): add RDMA development environment setup
Add comprehensive RDMA (soft-RoCE) development environment to devcontainer
with automatic setup, validation, and troubleshooting support.

Changes:
- Dockerfile: Add RDMA packages (rdma-core, ibverbs-utils, build-essential)
- devcontainer.json: Add RDMA_ENABLED environment variable
- post-create.sh: Add RDMA initialization with soft-RoCE auto-setup
- validate-rdma-environment.sh: Add comprehensive RDMA validation script
- devcontainer-rdma-setup.md: Add setup guide and troubleshooting docs
- macos-colima-vm.md: Add devcontainer option reference

Features:
- Automatic soft-RoCE device creation on container startup
- Manual setup helper script (setup-soft-roce.sh)
- Environment validation with detailed error reporting
- Graceful degradation when kernel modules unavailable
- Focus on RDMA development (eBPF support deferred)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,10 +15,12 @@ RUN apt-get update && apt-get install -y \
     llvm \
     libbpf-dev \
     libelf-dev \
-    bpftool \
     pkg-config \
     libibverbs-dev \
     librdmacm-dev \
+    rdma-core \
+    ibverbs-utils \
+    build-essential \
     dpkg-dev \
     linux-libc-dev \
     iproute2 \
