chore: bump Go version to 1.25 and upgrade to bookworm
- Update go.mod to require Go 1.25

- Upgrade Docker base images from golang:1.24-bullseye to golang:1.25-bookworm

- Upgrade runtime images from debian:bullseye-slim to debian:bookworm-slim

- Update mise.toml to use Go 1.25

- Update documentation to reflect Go 1.25+ requirement

- Simplify Claude Code installation in post-create.sh

--- a/Dockerfile.controller
+++ b/Dockerfile.controller
@@ -1,4 +1,4 @@
-FROM golang:1.24-bullseye AS builder
+FROM golang:1.25-bookworm AS builder
 
 WORKDIR /app
 
@@ -17,7 +17,7 @@ RUN mkdir -p /app && \
     /app/bin/controller --create-config --config-output /app/controller.yaml || true
 
 # Runtime image
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 WORKDIR /app
 
