--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,4 +1,4 @@
-FROM golang:1.24-bullseye AS builder
+FROM golang:1.25-bookworm AS builder
 
 ARG KERNEL_VERSION
 RUN if [ -z "$KERNEL_VERSION" ]; then \
@@ -47,7 +47,7 @@ RUN mkdir -p /app && \
     /app/bin/agent --create-config --config-output /app/agent.yaml || true
 
 # Runtime image
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
