feat(devcontainer): enable RDMA device visibility with comprehensive diagnostics
Add privileged mode, CAP_BPF capability, and debugfs mount to devcontainer
configuration to enable RDMA devices and eBPF programs. Implement comprehensive
diagnostic tools and platform-specific guidance for troubleshooting.

Changes:
- Enable privileged mode and CAP_BPF in devcontainer.json
- Add debugfs mount for eBPF support
- Create check-rdma-readiness.sh diagnostic tool
- Create pre-validate-host.sh for environment detection
- Enhance post-create.sh with platform detection and status tracking
- Update docker-compose.test.yml with RDMA/eBPF test capabilities
- Improve error messages in device.go with diagnostic guidance
- Update documentation with troubleshooting guides

Platform support:
- Linux hosts: Full RDMA/eBPF support
- macOS + Colima: Full RDMA/eBPF support (recommended)
- macOS + Docker Desktop: Limited support (migration to Colima recommended)

Diagnostic tools provide automatic platform detection, capability checks,
kernel module status, and platform-specific troubleshooting guidance.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,10 +7,12 @@
     }
   },
   "runArgs": [
+    "--privileged",
     "--cap-add=SYS_PTRACE",
     "--cap-add=NET_ADMIN",
     "--cap-add=SYS_ADMIN",
     "--cap-add=IPC_LOCK",
+    "--cap-add=CAP_BPF",
     "--security-opt", "seccomp=unconfined"
   ],
   "postCreateCommand": "bash .devcontainer/post-create.sh",
@@ -38,7 +40,8 @@
   "workspaceFolder": "/workspace",
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
   "mounts": [
-    "type=volume,source=rpingmesh-go-cache,target=/go/pkg"
+    "type=volume,source=rpingmesh-go-cache,target=/go/pkg",
+    "type=bind,source=/sys/kernel/debug,target=/sys/kernel/debug"
   ],
   "containerEnv": {
     "RDMA_ENABLED": "1"
